# arithmetic_benchmark

./: .gitignore  CMakeLists.txt  aarch64_glibc.cmake  build.sh  build_cross.sh
include/: Fixed.h
include/FixedPoint/: FixedPoint
src/: EigenMatrix_t.cpp  Fixed_cycle.cpp  Floating_cycle.cpp  StdMatrix_t.cpp
